--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookingAppTeam">
         <activity
-            android:name=".AvailableRoomsActivity"
+            android:name=".MyBookingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchRoomsActivity"
             android:exported="false" />
         <activity
             android:name=".DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManageBookingActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
